# elgamal_cpp

./: CMakeLists.txt  README.md
include/: elgamal.hpp  input.hpp  modulo.hpp
src/: elgamal.cpp  input.cpp  main.cpp  modulo.cpp
